flask-app-pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: flask-app-pod
  labels:
    app: flask-app-pod
spec:
  containers:
    - name: flask-app-container
      image: weimenglee/my-flask-app:latest
      ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
spec:
  type: NodePort
  selector:
    app: flask-app-pod
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30100  
# specify the NodePort you want to use 
#   (range: 30000-32767)
