mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        # image: mysql:latest
        image: mysql:5.7.39-oracle
        ports:
          - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-nodeport
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 30001   # 30000 to 32767
  type: NodePort
