service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    svc: web-service
spec:
  selector:
    app: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
