ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: "ws.localdomain"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web-service
            port:
              number: 80
